# SubspaceAD

./: .gitignore  README.md  config_last.json  gui.py  index.html  main.py  pyproject.toml  run_cup_skyrack.bat  style.css
.claude/: settings.local.json
src/subspacead/: config.py
src/subspacead.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/subspacead/core/: extractor.py
src/subspacead/data/: datasets.py
src/subspacead/utils/: report.py
